Fix HiveExternalCatalogVersionsSuite.scala for Java 17.